fix: stop legend from shifting in color picker story

--- a/src/components/legend/_legend_item.scss
+++ b/src/components/legend/_legend_item.scss
@@ -12,7 +12,6 @@ $legendItemVerticalPadding: $echLegendRowGap / 2;
     .echLegendItem__color--changable {
       cursor: pointer;
       height: 18px;
-      margin-left: 5px;
     }
   }
 
